add relative checkbox

--- a/packages/gestalt/src/Tile/Tile.css
+++ b/packages/gestalt/src/Tile/Tile.css
@@ -36,3 +36,10 @@
   cursor: default;
   pointer-events: none;
 }
+
+.overlay {
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  pointer-events: none;
+}
